# tre

./: .gitignore  ChangeLog.old  INSTALL.rst  LICENSE  Makefile.am  NEWS  PACKAGING.md  README  README.darcs  README.md  README_waf.txt  THANKS  config.h.in  configure.ac  tre.pc.in  tre.spec.in  waf  wscript
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml
Tools/waf/: build_variants.py  intltool.py  lib_unit_tests.py  python_unit_tests.py
contrib/: README.txt
contrib/ps3/: config.h
doc/: Makefile.am  agrep.1.in  tre-api.html  tre-syntax.html
include/: Makefile.am  wscript
include/tre/: tre.h
lib/: Makefile.am  regcomp.c  regerror.c  regex.h  regexec.c  tre-ast.c  tre-ast.h  tre-compile.c  tre-compile.h  tre-filter.c  tre-internal.h  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-match-utils.h  tre-mem.c  tre-mem.h  tre-parse.c  tre-parse.h  tre-stack.c  tre-stack.h  tre.h  wscript  xmalloc.c  xmalloc.h
local_includes/: Makefile.am  regex.h  tre.h  wscript
m4/: .gitignore  Makefile.am  ax_check_funcs_comp.m4  ax_check_sign.m4  ax_decl_wchar_max.m4  tre_prog_cc_optimizations.m4  vl_prog_cc_warnings.m4
po/: .gitignore  LINGUAS  Makevars  fi.po  sv.po  tre.pot  wscript  zh_CN.po
ps3/: Makefile  tre-config.h
python/: PR19_setup_py_diffs.txt  README_py_ext.txt  example.py  setup.py  setup.py.in  tre-python.c  wscript
python3/: example.py  setup.py  tre-python.c
src/: Makefile.am  agrep.c  wscript
tests/: Makefile.am  bench.c  build-on-hosts.sh  build-run.sh  build-tests.sh  randtest.c  retest.c  test-limits.c  test-str-source.c  wscript
tests/agrep/: Makefile.am  basic.ok  delimiters.ok  exitstatus.args  exitstatus.ok  records.ok  run-tests.sh  wscript
tests/build-hosts/: ahma  earthquake  hemuli  hutcs  jolly
tests/data/retest/expected/nls_ap_nc_sb/: foo.txt
tests/data/retest/expected/nls_ap_wc_mb_ti/: foo.txt
tests/data/retest/expected/nls_ap_wc_sb/: foo.txt
tests/data/retest/expected/nls_ex_nc_sb/: foo.txt
tests/data/retest/expected/nls_ex_nc_sb_ri/: foo.txt
tests/data/retest/expected/nls_ex_wc_mb/: foo.txt
tests/data/retest/expected/sls_ap_nc_sb/: foo.txt
tests/data/retest/expected/sls_ap_wc_mb/: foo.txt
tests/data/retest/expected/sls_ap_wc_sb/: foo.txt
tests/data/retest/expected/sls_ex_wc_sb/: foo.txt
tests/data/retest/expected/sls_ex_wc_sb_ti/: foo.txt
tests/data/strtest/expected/: foo.txt
utils/: .gitignore  Makefile.am  autogen.sh  build-package.sh  build-release.sh  build-rpm.sh  build-sources.sh  replace-vars.sh
vcbuild/: tre.sln  tre.vcxproj  tre.vcxproj.filters
win32/: config.h  config.h.in  retest.dsp  retest.vcproj  retest.vcxproj  test-str-source.vcxproj  tre-config.h  tre-config.h.in  tre.dsp  tre.sln  tre.vcproj  tre.vcxproj
(+2 files in other folders)
